# rmx

./: Cargo.toml  README.md  rmx.conf
.github/workflows/: package.yaml
debian/: changelog  copyright
src/: lib.rs  main.rs
src/parsing/: arguments.rs  mod.rs  preset.rs
tests/: test.rs
