[package]
name = "rmx"
description = "Remove files based on their extensions"
version = "0.1.2"
edition = "2024"
homepage = "https://github.com/ArthurLeFloch/rmx"
repository = "https://github.com/ArthurLeFloch/rmx"
default-run = "rmx"

[package.metadata.deb]
maintainer = "Arthur Le Floch <alf.github@gmail.com>"
copyright = "2025, Arthur Le Floch <alf.github@gmail.com>"
section = "utils"
priority = "optional"
extended-description = "CLI to delete files based on their extension"
license-file = "debian/copyright"
changelog = "build/changelog.gz"
assets = [
	{ source = "target/release/rmx", dest = "usr/bin/", mode = "755" },
	{ source = "build/README.gz", dest = "usr/share/doc/rmx/README.gz", mode = "644" },
	{ source = "build/rmx.1.gz", dest = "usr/share/man/man1/rmx.1.gz", mode = "644" },
	{ source = "rmx.conf", dest = "etc/rmx/rmx.conf", mode = "644" },
]

[dependencies]
regex = "1.11.1"
clap = { version = "4.5.35", features = ["derive"] }
clap_mangen = { version = "0.2.26", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"

[[bin]]
name = "rmx"
path = "src/main.rs"

[[bin]]
name = "man"
path = "src/build/man.rs"
required-features = ["mangen"]

[features]
mangen = ["dep:clap_mangen"]
